<resources>
    <string name="app_name">Hygiene Checker</string>
    <string name="search">Search!</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="empty_search_fields_error">You must fill at least one search field.</string>
    <string name="name_dummy">Name_Dummy</string>
    <string name="type_dummy">Type_Dummy</string>
    <string name="rating_dummy">5</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="no_results_found">No results found…</string>
    <string name="authority_load_error">Failed to load authorities</string>
    <string name="regions_load_error">Failed to load regions</string>
    <string name="business_types_load_error">Failed to load business types</string>
    <string name="loading_assets">Loading assets…</string>
    <string name="search_near_me">Near me</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search_radius_miles">Search Radius (miles)</string>
    <string name="local_authority">Local Authority</string>
    <string name="region">Region</string>
    <string name="rating">Rating</string>
    <string name="business_type">Business Type</string>
    <string name="simple_search">Simple Search</string>
    <string name="ok">OK</string>
    <string name="no_search_filter">At least one search criteria must be given</string>
    <string name="location_permission">Access to location is required in order to proceed with the current task</string>
    <string name="gps_enable_message">GPS is required to perform this task. Do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="waiting_location">Waiting for location…</string>
    <string name="search_radius_info">Requires location</string>
    <string name="_0">0</string>
    <string name="miles">miles</string>
    <string name="sort_by">Sort by:</string>
    <string name="results">results</string>
    <string name="_23">23</string>
    <string name="showing">Showing:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_shop_name">Dummy Shop Name</string>
    <string name="dummy_shop_category">Dummy Shop Category</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="_2_3">2.3</string>
    <string name="_0_stars">0 stars</string>
    <string name="loading">Loading…</string>
    <string name="_0_0_miles">0.0 miles</string>
    <string name="favourite_add_message">Added to favourites list</string>
    <string name="favourite_remove_message">Removed from favourites list</string>
    <string name="favourites">Favourites</string>
    <string name="search_results">Search Results</string>
    <string name="dummy_date">12.12.2012</string>
    <string name="dummy_type">Dummy Type</string>
    <string name="dummy_name">DUMMY NAME</string>
    <string name="dummy_address_line_one">Dummy Address Line One</string>
    <string name="dummy_address_line_two">Dummy Address Line Two</string>
    <string name="b15_2qu">B15 2QU</string>
    <string name="rating_authority">RATING AUTHORITY</string>
    <string name="authority_name">Authority Name</string>
    <string name="authorityemail_email_com">authorityEmail@email.com</string>
    <string name="www_authority_com">www.authority.com</string>
    <string name="dummy_fhis_rating">Passed</string>
    <string name="rating_scheme">Rating Scheme</string>
    <string name="dummy_rating_scheme">Dummy Rating Scheme</string>
    <string name="rating_date">Rating Date</string>
    <string name="fhis">FHIS</string>
    <string name="fhrs">FHRS</string>
    <string name="results_error">Error while retrieving data</string>
    <string name="scores">Scores</string>
    <string name="hygiene">Hygiene</string>
    <string name="structural">Structural</string>
    <string name="confidence_in_management">Confidence In Management</string>
    <string name="gps_error">Error while checking GPS connection</string>
    <string name="details_load_error">"Error occurred while retrieving data…"</string>
    <string name="asset_load_error">An error was encountered while loading assets…</string>
    <string name="no_connection_error">No internet connection detected…</string>
    <string name="load_error">Error encountered…</string>
    <string name="business_type_parse_fail">Failed to parse business types...</string>
    <string name="regions_parse_fail">Failed to parse regions</string>
    <string name="authorities_parse_fail">Failed to parse authorities...</string>
    <string name="_1">1</string>
    <string name="miles_br">mile(s)</string>
    <string name="advanced_options">Advanced Options</string>

    <string-array name="sort_options">
        <item>Rating (highest to lowest)</item>
        <item>Rating (lowest to highest)</item>
        <item>Relevance</item>
        <item>Distance</item>
    </string-array>
    <string-array name="fhis_ratings">
        <item>Pass</item>
        <item>Improvement Required</item>
        <item>Awaiting Publication</item>
        <item>Awaiting Inspection</item>
        <item>Exempt</item>
    </string-array>
    <string-array name="fhis_rating_keys">
        <item>fhis_pass_en-gb</item>
        <item>fhis_improvement_required_en-gb</item>
        <item>fhis_awaiting_publication_en-gb</item>
        <item>fhis_awaiting_inspection_en-gb</item>
        <item>fhis_exempt_en-gb</item>
    </string-array>
    <string-array name="rating_operators">
        <item>Equal</item>
        <item>Less Than Or Equal</item>
        <item>Greater Than Or Equal</item>
    </string-array>
</resources>
