<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_light"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.serba.hygenechecker.activities.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/inner_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/business_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/business_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/business_address_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_name_edit_text" />

            <Spinner
                android:id="@+id/business_type_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_type_cb" />

            <RadioGroup
                android:id="@+id/scheme_radios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/rating_cb"
                app:layout_constraintStart_toEndOf="@+id/rating_cb"
                app:layout_constraintTop_toTopOf="@+id/rating_cb">

                <RadioButton
                    android:id="@+id/fhrs_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/fhrs"
                    android:textSize="@dimen/text_subheading" />

                <RadioButton
                    android:id="@+id/fhis_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/fhis"
                    android:textSize="@dimen/text_subheading" />
            </RadioGroup>

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_cb" />

            <Spinner
                android:id="@+id/fhis_rating_spinner"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:entries="@array/fhis_ratings"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <Spinner
                android:id="@+id/region_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/region_auth_cb" />

            <TextView
                android:id="@+id/auth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/local_authority"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/authority_spinner"
                app:layout_constraintStart_toStartOf="@+id/authority_spinner" />

            <Spinner
                android:id="@+id/authority_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/region_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/region_spinner" />

            <SeekBar
                android:id="@+id/radius_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:max="29"
                app:layout_constraintEnd_toStartOf="@+id/radius_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/radius_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/_1"
                app:layout_constraintBottom_toBottomOf="@+id/radius_seek_bar"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/radius_seek_bar" />

            <CheckBox
                android:id="@+id/business_type_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:text="@string/business_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <CheckBox
                android:id="@+id/rating_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:checked="true"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_type_spinner" />

            <CheckBox
                android:id="@+id/region_auth_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/region"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fhis_rating_spinner" />

            <CheckBox
                android:id="@+id/search_radius_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/search_radius_miles"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/region_spinner" />

            <Button
                android:id="@+id/local_search_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_my_location_white_24dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/search_near_me"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search_button"
                app:layout_constraintTop_toBottomOf="@+id/radius_label" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/local_search_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radius_label" />

            <Button
                android:id="@+id/advanced_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:minHeight="0dp"
                android:text="@string/advanced_search"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/text_small_subheading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/business_address_edit_text" />

            <android.support.constraint.Group
                android:id="@+id/advanced_search_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="radius_label,radius_seek_bar,region_spinner,business_type_spinner,business_type_cb,region_auth_cb,rating_cb,search_radius_cb,separator_2,textView22,scheme_radios,textView18,textView16" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/separator_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/color_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advanced_search_button" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/search_radius_info"
                android:textSize="@dimen/text_small_subheading"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/search_radius_cb"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/search_radius_cb" />

            <Spinner
                android:id="@+id/rating_operator_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:entries="@array/rating_operators"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
                app:layout_constraintEnd_toStartOf="@+id/rating_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rating_bar" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/miles_br"
                app:layout_constraintBottom_toBottomOf="@+id/radius_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/radius_label" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/advanced_options"
                android:textAllCaps="true"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator_2" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
